# TPA

./: .gitignore  README.md  pyproject.toml
src/endstone_tpa/: __init__.py  tpa_plugin.py  utils.py
src/endstone_tpa/commands/: __init__.py  tpa.py  tpaallblock.py  tpaautoaccept.py  tpablock.py  tpacancel.py  tpaccept.py  tpdeny.py  tpthere.py
src/endstone_tpa/lang/: en_US.json  ko_KR.json
