[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-tpa"
version = "1.0.0"
dependencies = []
authors = [
    { name = "Endstone Developers", email = "hello@endstone.dev" },
]
description = "A TPA plugin for Endstone servers"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin", "tpa"]

[project.urls]
Homepage = "https://github.com/EndstoneMC/python-example-plugin"

[project.entry-points."endstone"]
tpa = "endstone_tpa:TpaPlugin"
