[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-tpa"
version = "2.0.1"

description = "A TPA plugin for Endstone servers"
readme = "README.md"
keywords = ["endstone", "plugin", "tpa"]

[project.urls]
Homepage = "https://github.com/iciency/TPA"

[project.entry-points."endstone"]
tpa = "endstone_tpa:TpaPlugin"
